blackify nzs3101.ipynb

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -26,7 +26,7 @@
     "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.results import MomentInteractionResults\n",
     "from concreteproperties.results import BiaxialBendingResults\n",
-    "from concreteproperties.results import MomentCurvatureResults\n"
+    "from concreteproperties.results import MomentCurvatureResults"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "design_code = NZS3101()\n",
     "concrete_40 = design_code.create_concrete_material(compressive_strength=40)\n",
-    "steel_300E = design_code.create_steel_material(steel_grade=\"300E\")\n"
+    "steel_300E = design_code.create_steel_material(steel_grade=\"300E\")"
    ]
   },
   {
@@ -77,7 +77,7 @@
     ")\n",
     "concrete_40.ultimate_stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Concrete Ultimate Stress-Strain Profile\", fmt=\"-r\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "print(f\"Overstrength Factor = {steel_300E.phi_os}\")\n",
     "steel_300E.stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Steel Stress-Strain Profile\", fmt=\"-r\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -143,7 +143,7 @@
     "\n",
     "conc_sec_beam = ConcreteSection(geom_beam)\n",
     "conc_sec_beam.plot_section()\n",
-    "design_code.assign_concrete_section(concrete_section=conc_sec_beam)\n"
+    "design_code.assign_concrete_section(concrete_section=conc_sec_beam)"
    ]
   },
   {
@@ -166,7 +166,7 @@
     "transformed_props = design_code.get_transformed_gross_properties(\n",
     "    elastic_modulus=concrete_40.stress_strain_profile.elastic_modulus\n",
     ")\n",
-    "cracked_props = design_code.calculate_cracked_properties()\n"
+    "cracked_props = design_code.calculate_cracked_properties()"
    ]
   },
   {
@@ -232,7 +232,7 @@
     "print(f\"phi = {phi_neg:.3f}\")\n",
     "print(f\"phi.Mn_neg = {f_ult_res_neg.m_x / 1e6:.2f} kN.m\")\n",
     "dc_ratio_neg = M_star_neg * 1e6 / f_ult_res_neg.m_x\n",
-    "print(f\"Demand/Capacity ratio = {abs(dc_ratio_neg):.3f}\")\n"
+    "print(f\"Demand/Capacity ratio = {abs(dc_ratio_neg):.3f}\")"
    ]
   },
   {
@@ -270,7 +270,7 @@
     "print(\"Negative overstrength demand:-\")\n",
     "print(f\"phi_o.Mo = {f_ult_res_neg_os.m_x / 1e6:.2f} kN.m\")\n",
     "os_ratio_neg = f_ult_res_neg_os.m_x / (M_star_neg * 1e6)\n",
-    "print(f\"Actual negative flexure overstrength ratio = {abs(os_ratio_neg):.3f}\")\n"
+    "print(f\"Actual negative flexure overstrength ratio = {abs(os_ratio_neg):.3f}\")"
    ]
   },
   {
@@ -302,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "steel_500E = design_code.create_steel_material(steel_grade=\"500E\")\n"
+    "steel_500E = design_code.create_steel_material(steel_grade=\"500E\")"
    ]
   },
   {
@@ -342,7 +342,7 @@
     "\n",
     "conc_sec_col = ConcreteSection(geom_col)\n",
     "conc_sec_col.plot_section()\n",
-    "design_code.assign_concrete_section(concrete_section=conc_sec_col)\n"
+    "design_code.assign_concrete_section(concrete_section=conc_sec_col)"
    ]
   },
   {
@@ -381,7 +381,7 @@
     "print(f\"phi.Mn = {f_ult_res_C.m_x / 1e6:.2f} kN.m at axial load of {N_o_C:.2f} kN\")\n",
     "print(f\"Mo = {M_o_C} kN.m\")\n",
     "col_ratio_C = M_o_C * 1e6 / f_ult_res_C.m_x\n",
-    "print(f\"Actual design ratio = {abs(col_ratio_C):.3f}\")\n"
+    "print(f\"Actual design ratio = {abs(col_ratio_C):.3f}\")"
    ]
   },
   {
@@ -414,7 +414,7 @@
    "source": [
     "f_mi_res, mi_res, phis = design_code.moment_interaction_diagram(\n",
     "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "source": [
     "MomentInteractionResults.plot_multiple_diagrams(\n",
     "    [f_mi_res, mi_res], [\"Factored\", \"Unfactored\"], fmt=\"-\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -476,7 +476,7 @@
     "    )\n",
     "\n",
     "ax.legend()\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -497,7 +497,7 @@
    "source": [
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(n=N_o_T * 1e3)\n",
-    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n=N_o_C * 1e3)\n"
+    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n=N_o_C * 1e3)"
    ]
   },
   {
@@ -517,7 +517,7 @@
     "# plot case 2\n",
     "ax = f_bb_res2.plot_diagram(fmt=\"-r\", render=False)\n",
     "ax.plot(M_o_C, 0, \"ok\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -589,7 +589,7 @@
     "ax.set_ylabel(\"Bending Moment $M_y$ (kNm)\")\n",
     "ax.set_zlabel(\"Axial Force $N$ (kN)\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -669,7 +669,7 @@
     "\n",
     "concrete_25_prob.stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Mander Unconfined Stress-Strain Profile\", fmt=\"-r\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -695,7 +695,7 @@
     ")\n",
     "steel_275.stress_strain_profile.plot_stress_strain(\n",
     "    title=\"Steel Stress-Strain Profile\", fmt=\"-r\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -722,7 +722,7 @@
     "    n_top=5,\n",
     "    dia_bot=bar_dia,\n",
     "    n_bot=5,\n",
-    "    n_circle=8,\n",
+    "    n_circle=16,\n",
     "    cover=30 + 10,\n",
     "    area_top=bar_dia**2 * np.pi / 4,\n",
     "    area_bot=bar_dia**2 * np.pi / 4,\n",
@@ -732,7 +732,7 @@
     "\n",
     "conc_sec = ConcreteSection(geom_col)\n",
     "conc_sec.plot_section()\n",
-    "design_code.assign_concrete_section(concrete_section=conc_sec)\n"
+    "design_code.assign_concrete_section(concrete_section=conc_sec)"
    ]
   },
   {
@@ -763,10 +763,10 @@
     "    f\"The failure material is:-\\n{moment_curvature_results.failure_geometry.material.name}\"\n",
     ")\n",
     "\n",
-    "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"-r\")\n",
+    "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"or\")\n",
     "print(\n",
     "    f\"Cracking moment is M_cr = {conc_sec.calculate_cracked_properties(theta=0).m_cr / 1e6:.2f} kNm\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -791,7 +791,7 @@
     "max_moment = max(moment_curvature_results.m_xy) * 1e-6\n",
     "max_curvature = max(moment_curvature_results.kappa)\n",
     "print(f\"Maximum Moment = {max_moment:.2f} kN.m\")\n",
-    "print(f\"Maximum Curvature = {max_curvature:.8f} rads\")\n"
+    "print(f\"Maximum Curvature = {max_curvature:.8f} rads\")"
    ]
   },
   {
@@ -831,7 +831,7 @@
     "\n",
     "conc_sec = ConcreteSection(geom_col)\n",
     "conc_sec.plot_section()\n",
-    "design_code.assign_concrete_section(concrete_section=conc_sec)\n"
+    "design_code.assign_concrete_section(concrete_section=conc_sec)"
    ]
   },
   {
@@ -857,7 +857,7 @@
     "print(\"Probable Moment Capacity from ultimate strength check: -\")\n",
     "print(f\"Mp = {f_ult_res.m_x / 1e6:.2f} kN.m at an axial load of {n/1e3:.2f} kN\\n\")\n",
     "print(\"Maximum Moment Capacity from moment-curvature analysis: -\")\n",
-    "print(f\"Maximum Moment = {max_moment:.2f} kN.m\")\n"
+    "print(f\"Maximum Moment = {max_moment:.2f} kN.m\")"
    ]
   },
   {
@@ -918,7 +918,7 @@
     "print(f\"Effective depth of tension reinforcement = {eff_depth:.2f} mm\")\n",
     "print(f\"Probable Curvature Capacity = {phi_cap:.8f} rads\")\n",
     "print(f\"Maximum Curvature from moment-curvature analysis = {max_curvature:.8f} rads\")\n",
-    "print(f\"Ratio of results = {phi_cap/max_curvature:.2f}\")\n"
+    "print(f\"Ratio of results = {phi_cap/max_curvature:.2f}\")"
    ]
   },
   {
@@ -926,7 +926,7 @@
    "id": "f5267778",
    "metadata": {},
    "source": [
-    "This calculated ratio shows that the NZSEE assessment guidelines formulas have overestimated the maximum curvature obtained when compared with that from the moment-curvature analysis. This highlights the importance of undertaking a moment-curvature analyses to capture the behaviour of the concrete cross-section, rather than placing sole reliance on empirical formulas."
+    "This calculated ratio shows that the NZSEE assessment guidelines formulas have slightly underestimated the maximum curvature obtained when compared with that from the moment-curvature analysis. This highlights the importance of undertaking a moment-curvature analyses to capture the behaviour of the concrete cross-section, rather than placing sole reliance on empirical formulas."
    ]
   }
  ],
