add progress_bar, add section_type remove completed #TODO items

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -114,7 +114,17 @@
     "## Assigning Geometry to the Design Code\n",
     "This example will analyse an 800D x 500W concrete beam with 6-D25 top and 6-D20 bottom bars with an assumed R12 stirrup size with a specified 35 concrete cover all around. It is assumed the analysis of the concrete frame containing the beam in question is based on a maximum global ductility demand of $\\mu$ = 3. An assessment of the Potential Plastic Hinge Region (PPHR) curvature has shown that the PPHR can be designated as a Limited Ductile Plastic Region (LDPR). \n",
     "\n",
-    "After creating the geometry, it must be assigned to the design code object: -"
+    "After creating the geometry, it must be assigned to the design code object. When assigning the geometry to the design code we can also specify what type of member the geometry is: -\n",
+    "\n",
+    "The NZS3101 design code class includes four valid section types that can be assigned to the geometry, the ``section_type`` parameter impacts the strength reduction factor and defines the maximum axial load in compression that the concrete cross section can sustain: -\n",
+    "\n",
+    "- ``column`` - Analyses assigned geometry as a column (or beam) member in accordance with NZS3101:2006 Chapter 9 or 10 as appropriate (default if not specified)\n",
+    "\n",
+    "- ``wall`` - Analyses assigned geometry as a doubly reinforced wall member in accordance with NZS3101:2006 Chapter 11\n",
+    "\n",
+    "- ``wall_sr_s`` - Analyses assigned geometry as a singly reinforced wall member in accordance with NZS3101:2006 Chapter 11 for design actions causing bending about the strong axis\n",
+    "\n",
+    "- ``wall_sr_m`` - Analyses assigned concrete section object as a singly reinforced wall member in accordance with NZS3101:2006 Chapter 11 for design actions causing bending about the minor axis"
    ]
   },
   {
@@ -143,7 +153,9 @@
     "\n",
     "conc_sec_beam = ConcreteSection(geom_beam)\n",
     "conc_sec_beam.plot_section()\n",
-    "design_code.assign_concrete_section(concrete_section=conc_sec_beam)"
+    "design_code.assign_concrete_section(\n",
+    "    concrete_section=conc_sec_beam, section_type=\"column\"\n",
+    ")"
    ]
   },
   {
@@ -181,11 +193,11 @@
     "\n",
     "* NZS3101-based design checks\n",
     "\n",
-    "    - ``nom_chk`` - Nominal design capacity check - undertake an analysis with $\\phi$ = 0.85, and lower characteristic material properties\n",
+    "    - ``nom_chk`` - Nominal design capacity check - undertake an analysis with $\\phi$ = 0.85, and lower characteristic material properties (default if not specified)\n",
     "\n",
     "    - ``cpe_chk`` - Capacity protected element check - undertake an analysis with $\\phi$ = 1.00, and lower characteristic material properties\n",
     "\n",
-    "    - ``os_chk`` -  Overstrength capacity check - undertake an analysis with $\\phi$ = 1.00, and likely maximum material properties\n",
+    "    - ``os_chk`` - Overstrength capacity check - undertake an analysis with $\\phi$ = 1.00, and likely maximum material properties\n",
     "\n",
     "* NZSEE C5 assessment guideline-based design checks\n",
     "\n",
@@ -413,7 +425,7 @@
    "outputs": [],
    "source": [
     "f_mi_res, mi_res, phis = design_code.moment_interaction_diagram(\n",
-    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\"\n",
+    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", progress_bar=False\n",
     ")"
    ]
   },
@@ -433,8 +445,14 @@
    "outputs": [],
    "source": [
     "MomentInteractionResults.plot_multiple_diagrams(\n",
-    "    [f_mi_res, mi_res], [\"Factored\", \"Unfactored\"], fmt=\"-\"\n",
-    ")"
+    "    [f_mi_res, mi_res],\n",
+    "    [\"Factored\", \"Unfactored\"],\n",
+    "    fmt=\"-\",\n",
+    "    linewidth=0.25,\n",
+    "    render=False,\n",
+    ")\n",
+    "plt.gca().lines[0].set_linewidth(3)\n",
+    "plt.show()"
    ]
   },
   {
@@ -497,7 +515,9 @@
    "source": [
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(n=N_o_T * 1e3)\n",
-    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n=N_o_C * 1e3)"
+    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
+    "    n=N_o_C * 1e3, progress_bar=False\n",
+    ")"
    ]
   },
   {
@@ -551,13 +571,13 @@
     "\n",
     "for theta in theta_list:\n",
     "    f_mi_res, _, _ = design_code.moment_interaction_diagram(\n",
-    "        pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", theta=theta\n",
+    "        pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", theta=theta, progress_bar=False\n",
     "    )\n",
     "    results_mi.append(f_mi_res)\n",
     "\n",
     "for n in n_list:\n",
     "    f_bb_res, _ = design_code.biaxial_bending_diagram(\n",
-    "        pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n=n\n",
+    "        pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n=n, progress_bar=False\n",
     "    )\n",
     "    results_bb.append(f_bb_res)\n",
     "    labels.append(f\"N* = {n/1e3}\")\n",
@@ -588,7 +608,8 @@
     "ax.set_xlabel(\"Bending Moment $M_x$ (kNm)\")\n",
     "ax.set_ylabel(\"Bending Moment $M_y$ (kNm)\")\n",
     "ax.set_zlabel(\"Axial Force $N$ (kN)\")\n",
-    "\n",
+    "# ax.axes.zaxis.labelpad = 10\n",
+    "plt.tight_layout(pad=-10)\n",
     "plt.show()"
    ]
   },
@@ -715,7 +736,7 @@
    "source": [
     "bar_dia = 28\n",
     "\n",
-    "geom_col = concrete_rectangular_section(\n",
+    "geom_beam = concrete_rectangular_section(\n",
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=bar_dia,\n",
@@ -730,7 +751,7 @@
     "    steel_mat=steel_275,\n",
     ")\n",
     "\n",
-    "conc_sec = ConcreteSection(geom_col)\n",
+    "conc_sec = ConcreteSection(geom_beam)\n",
     "conc_sec.plot_section()\n",
     "design_code.assign_concrete_section(concrete_section=conc_sec)"
    ]
@@ -758,12 +779,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "moment_curvature_results = conc_sec.moment_curvature_analysis(theta=0)\n",
+    "moment_curvature_results = conc_sec.moment_curvature_analysis(\n",
+    "    theta=0, progress_bar=False\n",
+    ")\n",
     "print(\n",
     "    f\"The failure material is:-\\n{moment_curvature_results.failure_geometry.material.name}\"\n",
     ")\n",
     "\n",
-    "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"or\")\n",
+    "MomentCurvatureResults.plot_results(moment_curvature_results, fmt=\"-r\")\n",
     "print(\n",
     "    f\"Cracking moment is M_cr = {conc_sec.calculate_cracked_properties(theta=0).m_cr / 1e6:.2f} kNm\"\n",
     ")"
@@ -814,7 +837,7 @@
     "\n",
     "bar_dia = 28\n",
     "\n",
-    "geom_col = concrete_rectangular_section(\n",
+    "geom_beam = concrete_rectangular_section(\n",
     "    b=400,\n",
     "    d=600,\n",
     "    dia_top=bar_dia,\n",
@@ -829,7 +852,7 @@
     "    steel_mat=steel_275,\n",
     ")\n",
     "\n",
-    "conc_sec = ConcreteSection(geom_col)\n",
+    "conc_sec = ConcreteSection(geom_beam)\n",
     "conc_sec.plot_section()\n",
     "design_code.assign_concrete_section(concrete_section=conc_sec)"
    ]
