Update decompression refs in docs

--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -296,7 +296,7 @@
     "\n",
     "The following parameters can be used to modify the moment interaction diagram:\n",
     "\n",
-    "1. ``limits`` - List of control points that define the start and end of the interaction diagram. List length must equal two. The default limits range from decompression ``(\"D\", 1.0)`` to zero curvature tension ``(\"d_n\", 1e-6)``.\n",
+    "1. ``limits`` - List of control points that define the start and end of the interaction diagram. List length must equal two. The default limits range from concrete decompression strain ``(\"D\", 1.0)`` to zero curvature tension ``(\"d_n\", 1e-6)``.\n",
     "\n",
     "2. ``control_points`` - adding control points to the moment interaction diagram allows the user to ensure certain points are captured on the moment interaction diagram.  The default argument for ``control_points`` is ``[(\"kappa0\", 0.0), (\"fy\", 1.0), (\"N\", 0.0)]`` which produces control points at the pure compression point, the balanced point and the pure bending point. \n",
     "    \n",
@@ -409,7 +409,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
+    "hash": "cbcd46708823968cdeec8140ad70b4bb10e53ceac96cecaaf557485e336f0189"
    }
   }
  },
