Agent6-6-6 simple suggestions

--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "1. ``D`` - ratio of neutral axis depth to section depth, e.g. the (``\"D\"``, ``0.5``) control point will ensure a neutral axis at mid-depth is analysed.\n",
     "\n",
-    "2. ``d_n`` - neutral axis depth, e.g. the (``\"d_n\"``, ``200``) control point will ensure a netural axis at 200 is analysed.\n",
+    "2. ``d_n`` - neutral axis depth, e.g. the (``\"d_n\"``, ``200``) control point will ensure a neutral axis at 200 is analysed.\n",
     "\n",
     "3. ``fy`` - yield ratio of the most extreme tensile bar, e.g. the (``\"fy\"``, ``0.5``) control point will ensure a neutral axis corresponding to a strain of half the yield strain in the extreme tensile bar is analysed. The (``\"fy\"``, ``1.0``) control point is the balanced point.\n",
     "\n",
@@ -303,7 +303,7 @@
     "\n",
     "3. ``labels`` - A list of labels to apply to the ``limits`` and ``control_points`` for plotting purposes. The first two values in ``labels`` apply labels to the ``limits``, the remaining values apply labels to the ``control_points``.\n",
     "\n",
-    "4. ``n_points`` - The number of points to compute including and between the ``limits`` of the moment interaction diagram.\n",
+    "4. ``n_points`` - The number of points to compute including and between the ``limits`` of the moment interaction diagram. Generates equally spaced neutral axis depths between the ``limits``.\n",
     "\n",
     "5. ``n_spacing`` - If provided, overrides ``n_points`` and spaces the points on the moment interaction diagram by an axial force ``n_spacing``.\n",
     "\n",
@@ -317,13 +317,13 @@
    "source": [
     "The below example will use these features, creating additional control points at:\n",
     "\n",
-    "- Decompression of the concrete ``(\"D\", 1.0)`` - label ``C``\n",
-    "- Decompression of the steel ``(\"fy\", 0.0)`` - label ``D``\n",
+    "- Decompression point for the concrete ``(\"D\", 1.0)`` - label ``C``\n",
+    "- Decompression point for the steel ``(\"fy\", 0.0)`` - label ``D``\n",
     "- 50% yield strain in the steel ``(\"fy\", 0.5)`` - label ``E``\n",
     "- 100% yield strain in the steel ``(\"fy\", 1.0)`` - label ``F``\n",
     "- Neutral axis depth of 200 mm ``(\"d_n\", 200.0)`` - label ``G``\n",
     "\n",
-    "A maximum compressive force of 6800 kN is provided. Label ``A`` is placed at zero axial force and label ``B`` is placed at the intersection with the moment interaction diagram.\n",
+    "A maximum compressive force of 6800 kN is provided. Label ``A`` is placed at zero bending moment and label ``B`` is placed at the intersection with the moment interaction diagram.\n",
     "\n",
     "The limits of the moment interaction diagram are taken from:\n",
     "\n",
