Update n_spacing behaviour

--- a/docs/source/notebooks/moment_interaction.ipynb
+++ b/docs/source/notebooks/moment_interaction.ipynb
@@ -305,7 +305,7 @@
     "\n",
     "4. ``n_points`` - The number of points to compute including and between the ``limits`` of the moment interaction diagram. Generates equally spaced neutral axis depths between the ``limits``.\n",
     "\n",
-    "5. ``n_spacing`` - If provided, overrides ``n_points`` and spaces the points on the moment interaction diagram by an axial force ``n_spacing``.\n",
+    "5. ``n_spacing`` - If provided, overrides ``n_points`` and generates the moment interaction diagram using ``n_spacing`` equally spaced axial loads.\n",
     "\n",
     "6. ``max_comp`` - Limits the maximum compressive force in the moment interaction diagram by cutting off the top of the diagram."
    ]
@@ -330,7 +330,7 @@
     "- Pure compression ``(\"kappa0\", 0)`` - note label ``NA`` is removed by ``max_comp``\n",
     "- Pure tension ``(\"d_n\", 1e-6)`` - label ``I``\n",
     "\n",
-    "The interaction diagram is generated with a constant axial force spacing of ``200 kN``."
+    "The interaction diagram is generated with constant axial force spacing using 36 points."
    ]
   },
   {
@@ -356,7 +356,7 @@
     "        (\"N\", 0.0),\n",
     "    ],\n",
     "    labels=[\"NA\", \"I\", \"C\", \"D\", \"E\", \"F\", \"G\", \"H\"],\n",
-    "    n_spacing=200e3,\n",
+    "    n_spacing=36,\n",
     "    max_comp=6.8e6,\n",
     "    max_comp_labels=[\"A\", \"B\"],\n",
     "    progress_bar=False,\n",
