update nzs3101 notebook

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -451,7 +451,7 @@
     "    linewidth=0.25,\n",
     "    render=False,\n",
     ")\n",
-    "plt.gca().lines[0].set_linewidth(3)\n",
+    "plt.gca().lines[0].set_linewidth(5)\n",
     "plt.show()"
    ]
   },
@@ -514,7 +514,9 @@
    "outputs": [],
    "source": [
     "# create biaxial bending diagram\n",
-    "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(n=N_o_T * 1e3)\n",
+    "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(\n",
+    "    n=N_o_T * 1e3, progress_bar=False\n",
+    ")\n",
     "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
     "    n=N_o_C * 1e3, progress_bar=False\n",
     ")"
