update net axial load variable n to n_design for NZS3101 class

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -373,7 +373,7 @@
     "N_o_C = 1100\n",
     "\n",
     "f_ult_res_T, _, _ = design_code.ultimate_bending_capacity(\n",
-    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n=N_o_T * 1e3\n",
+    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n_design=N_o_T * 1e3\n",
     ")\n",
     "print(\"Tension case capacity:-\")\n",
     "print(f\"phi.Mn = {f_ult_res_T.m_x / 1e6:.2f} kN.m at axial load of {N_o_T:.2f} kN\")\n",
@@ -382,7 +382,7 @@
     "print(f\"Actual design ratio = {abs(col_ratio_T):.3f}\\n\")\n",
     "\n",
     "f_ult_res_C, _, _ = design_code.ultimate_bending_capacity(\n",
-    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n=N_o_C * 1e3\n",
+    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n_design=N_o_C * 1e3\n",
     ")\n",
     "print(\"Compression case capacity:-\")\n",
     "print(f\"phi.Mn = {f_ult_res_C.m_x / 1e6:.2f} kN.m at axial load of {N_o_C:.2f} kN\")\n",
@@ -510,10 +510,10 @@
    "source": [
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(\n",
-    "    n=N_o_T * 1e3, progress_bar=False\n",
+    "    n_design=N_o_T * 1e3, progress_bar=False\n",
     ")\n",
     "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
-    "    n=N_o_C * 1e3, progress_bar=False\n",
+    "    n_design=N_o_C * 1e3, progress_bar=False\n",
     ")"
    ]
   },
@@ -559,7 +559,7 @@
     "steps_axial = 15\n",
     "steps_moment = 20\n",
     "# generate axial load list\n",
-    "n_list = np.linspace(-max_ten + 20000, max_comp, steps_axial)\n",
+    "n_design_list = np.linspace(-max_ten + 20000, max_comp, steps_axial)\n",
     "theta_list = np.linspace(0.0, 2 * np.pi, steps_moment, False)\n",
     "\n",
     "results_bb = []\n",
@@ -572,12 +572,15 @@
     "    )\n",
     "    results_mi.append(f_mi_res)\n",
     "\n",
-    "for n in n_list:\n",
+    "for n_design in n_design_list:\n",
     "    f_bb_res, _ = design_code.biaxial_bending_diagram(\n",
-    "        pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n=n, progress_bar=False\n",
+    "        pphr_class=\"NDPR\",\n",
+    "        analysis_type=\"cpe_chk\",\n",
+    "        n_design=n_design,\n",
+    "        progress_bar=False,\n",
     "    )\n",
     "    results_bb.append(f_bb_res)\n",
-    "    labels.append(f\"N* = {n/1e3}\")\n",
+    "    labels.append(f\"N* = {n_design/1e3}\")\n",
     "\n",
     "# plot all the M/N and M/M diagrams on one plot\n",
     "fig = plt.figure(figsize=(16, 10))\n",
@@ -586,26 +589,26 @@
     "m_scale = 1e-6\n",
     "\n",
     "for mi_res in results_mi:\n",
-    "    n, m_x_list = mi_res.get_results_lists(moment=\"m_x\")\n",
+    "    n_design, m_x_list = mi_res.get_results_lists(moment=\"m_x\")\n",
     "    _, m_y_list = mi_res.get_results_lists(moment=\"m_y\")\n",
-    "    n = np.array(n) * n_scale\n",
+    "    n_design = np.array(n_design) * n_scale\n",
     "    m_x_list = np.array(m_x_list) * m_scale\n",
     "    m_y_list = np.array(m_y_list) * m_scale\n",
     "\n",
-    "    ax.plot3D(m_x_list, m_y_list, n, \"-k\", linewidth=0.5)\n",
+    "    ax.plot3D(m_x_list, m_y_list, n_design, \"-k\", linewidth=0.5)\n",
     "\n",
     "for i, bb_res in enumerate(results_bb):\n",
     "    m_x_list, m_y_list = bb_res.get_results_lists()\n",
     "    m_x_list = np.array(m_x_list) * m_scale\n",
     "    m_y_list = np.array(m_y_list) * m_scale\n",
     "\n",
-    "    n = np.array(n_list[i]) * n_scale\n",
-    "    ax.plot3D(m_x_list, m_y_list, n, \"-r\", linewidth=0.5)\n",
+    "    n_design = np.array(n_design_list[i]) * n_scale\n",
+    "    ax.plot3D(m_x_list, m_y_list, n_design, \"-r\", linewidth=0.5)\n",
     "\n",
     "ax.set_xlabel(\"Bending Moment $M_x$ (kNm)\")\n",
     "ax.set_ylabel(\"Bending Moment $M_y$ (kNm)\")\n",
     "ax.set_zlabel(\"Axial Force $N$ (kN)\")\n",
-    "# ax.axes.zaxis.labelpad = 10\n",
+    "\n",
     "plt.tight_layout(pad=-10)\n",
     "plt.show()"
    ]
@@ -865,13 +868,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 0 * 1e3\n",
+    "n_design = 0 * 1e3\n",
     "f_ult_res, _, _ = design_code.ultimate_bending_capacity(\n",
-    "    pphr_class=\"NDPR\", analysis_type=\"prob_chk\", n=n\n",
+    "    pphr_class=\"NDPR\", analysis_type=\"prob_chk\", n_design=n_design\n",
     ")\n",
     "\n",
     "print(\"Probable Moment Capacity from ultimate strength check: -\")\n",
-    "print(f\"Mp = {f_ult_res.m_x / 1e6:.2f} kN.m at an axial load of {n/1e3:.2f} kN\\n\")\n",
+    "print(\n",
+    "    f\"Mp = {f_ult_res.m_x / 1e6:.2f} kN.m at an axial load of {n_design/1e3:.2f} kN\\n\"\n",
+    ")\n",
     "print(\"Maximum Moment Capacity from moment-curvature analysis: -\")\n",
     "print(f\"Maximum Moment = {max_moment:.2f} kN.m\")"
    ]
