add M/N test, modify to account for #66 M/N updates

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -21,7 +21,6 @@
     "from concreteproperties.design_codes.nzs3101 import NZS3101\n",
     "import concreteproperties.stress_strain_profile as ssp\n",
     "from concreteproperties.material import Concrete\n",
-    "from concreteproperties.stress_strain_profile import ModifiedMander\n",
     "from sectionproperties.pre.library.concrete_sections import concrete_rectangular_section\n",
     "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.results import MomentInteractionResults\n",
@@ -420,7 +419,7 @@
    "outputs": [],
    "source": [
     "f_mi_res, mi_res, phis = design_code.moment_interaction_diagram(\n",
-    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", progress_bar=False\n",
+    "    pphr_class=\"NDPR\", analysis_type=\"cpe_chk\", n_spacing=36, progress_bar=False\n",
     ")"
    ]
   },
@@ -441,12 +440,17 @@
    "source": [
     "MomentInteractionResults.plot_multiple_diagrams(\n",
     "    [f_mi_res, mi_res],\n",
-    "    [\"Factored\", \"Unfactored\"],\n",
-    "    fmt=\"-\",\n",
-    "    linewidth=0.25,\n",
+    "    [\"Factored M/N\", \"Unfactored M/N\"],\n",
+    "    fmt=\"or\",\n",
     "    render=False,\n",
+    "    moment=\"m_xy\",\n",
     ")\n",
-    "plt.gca().lines[0].set_linewidth(5)\n",
+    "plt.gca().lines[0].set_linestyle(\"solid\")\n",
+    "plt.gca().lines[0].set_marker(\"\")\n",
+    "plt.gca().lines[1].set_markersize(4)\n",
+    "plt.gca().lines[1].set_color(\"k\")\n",
+    "plt.legend()\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -638,7 +642,7 @@
     "\n",
     "Note it may not be appropriate to utilise a concrete stress/strain relationship that was deemed suitable for an analysis to determine the ultimate capacity of a concrete cross section as these typically do not model the degradation of the concrete strength at higher strains.\n",
     "\n",
-    "Note that for a moment-curvature analysis to NZSEE C5 assessment guidelines, we can utilise a higher ultimate concrete strain of $\\varepsilon_{c,max}$ = 0.004 for an unconfined analysis. Note also for a moment-curvature analysis to the NZSEE C5 assessment guidelines that the limiting strain in the reinforcement is taken as $\\varepsilon_{c,max}$ = 0.6 $\\!\\varepsilon_{cu}$ but $\\leq$ 0.06 (or 6% strain). \n",
+    "Note that for a moment-curvature analysis to NZSEE C5 assessment guidelines, we can utilise a higher ultimate concrete strain of $\\varepsilon_{c,max}$ = 0.004 for an unconfined analysis. Note also for a moment-curvature analysis to the NZSEE C5 assessment guidelines that the limiting strain in the reinforcement is taken as $\\varepsilon_{c,max}$ = 0.6 $\\varepsilon_{cu}$ but $\\leq$ 0.06 (or 6% strain). \n",
     "\n",
     "Note if the section can be classified as being confined, the concrete limiting strain can be even higher leading to increased ductility of the cross-section (refer to NZSEE C5 assessment guidelines for further discussion). However, for a confined analysis the section is typically analysed assuming the cover concrete has spalled as the cover concrete is unconfined (so a concrete section corresponding to this particular scenario would need to be created if a confined concrete stress-strain relationship ws being utilised).\n",
     "\n",
