refactor lower characteristic tensile strength of concrete corrects utilising CL5.2.4 instead of CL5.2.5

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -662,9 +662,12 @@
     "    steel_grade=\"275\", fracture_strain=min(0.06, (15 / 100) * 0.6)\n",
     ")\n",
     "\n",
-    "# determine the concrete probable strength\n",
+    "# determine the concrete probable strength in compresison and tension\n",
     "compressive_strength = 25\n",
-    "compressive_strength = (\n",
+    "prob_tensile_strength = design_code.concrete_tensile_strength(\n",
+    "    compressive_strength=compressive_strength, prob_design=True\n",
+    ")\n",
+    "prob_compressive_strength = (\n",
     "    1.5 * compressive_strength\n",
     "    if compressive_strength <= 40\n",
     "    else 1.4 * compressive_strength\n",
@@ -676,19 +679,18 @@
     "    name=\"Mander Concrete\",\n",
     "    density=2300,\n",
     "    stress_strain_profile=ssp.ModifiedMander(\n",
-    "        elastic_modulus=design_code.e_conc(compressive_strength),\n",
-    "        compressive_strength=compressive_strength,\n",
-    "        tensile_strength=0.55 * np.sqrt(compressive_strength),\n",
-    "        sect_type=\"rect\",\n",
+    "        elastic_modulus=design_code.e_conc(prob_compressive_strength),\n",
+    "        compressive_strength=prob_compressive_strength,\n",
+    "        tensile_strength=prob_tensile_strength,\n",
     "        conc_tension=True,\n",
     "    ),\n",
     "    ultimate_stress_strain_profile=ssp.RectangularStressBlock(\n",
-    "        compressive_strength=compressive_strength,\n",
-    "        alpha=design_code.alpha_1(compressive_strength),\n",
-    "        gamma=design_code.beta_1(compressive_strength),\n",
+    "        compressive_strength=prob_compressive_strength,\n",
+    "        alpha=design_code.alpha_1(prob_compressive_strength),\n",
+    "        gamma=design_code.beta_1(prob_compressive_strength),\n",
     "        ultimate_strain=0.003,\n",
     "    ),\n",
-    "    flexural_tensile_strength=0.55 * np.sqrt(37.5),\n",
+    "    flexural_tensile_strength=prob_tensile_strength,\n",
     "    colour=\"lightgrey\",\n",
     ")\n",
     "\n",
