update/refine docs, refactor prob conc strength, add tests

--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -667,11 +667,7 @@
     "prob_tensile_strength = design_code.concrete_tensile_strength(\n",
     "    compressive_strength=compressive_strength, prob_design=True\n",
     ")\n",
-    "prob_compressive_strength = (\n",
-    "    1.5 * compressive_strength\n",
-    "    if compressive_strength <= 40\n",
-    "    else 1.4 * compressive_strength\n",
-    ")\n",
+    "prob_compressive_strength = design_code.prob_compressive_strength(compressive_strength)\n",
     "\n",
     "# create a probable strength concrete material with properties suitable for a\n",
     "# moment-curvature analysis\n",
