Change n to n_design for AS3600; relevant docs updates

--- a/docs/source/notebooks/as3600.ipynb
+++ b/docs/source/notebooks/as3600.ipynb
@@ -148,7 +148,10 @@
     "transformed_props = design_code.get_transformed_gross_properties(\n",
     "    elastic_modulus=concrete.stress_strain_profile.elastic_modulus\n",
     ")\n",
-    "cracked_props = design_code.calculate_cracked_properties()"
+    "cracked_props = design_code.calculate_cracked_properties()\n",
+    "\n",
+    "gross_props.print_results()\n",
+    "cracked_props.print_results()"
    ]
   },
   {
@@ -192,7 +195,7 @@
    "outputs": [],
    "source": [
     "n_star = 1000e3\n",
-    "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity(n=n_star)\n",
+    "f_ult_res, ult_res, phi = design_code.ultimate_bending_capacity(n_design=n_star)\n",
     "print(f\"N* = {n_star / 1e3:.0f} kN\")\n",
     "print(f\"Nu = {ult_res.n / 1e3:.2f} kN\")\n",
     "print(f\"Mu = {ult_res.m_xy / 1e6:.2f} kN.m\")\n",
@@ -380,7 +383,7 @@
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(progress_bar=False)\n",
     "bb_res1 = conc_sec.biaxial_bending_diagram(progress_bar=False)\n",
-    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n=2000e3, progress_bar=False)\n",
+    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n_design=2000e3, progress_bar=False)\n",
     "bb_res2 = conc_sec.biaxial_bending_diagram(n=2000e3, progress_bar=False)"
    ]
   },
