--- a/docs/source/notebooks/as3600.ipynb
+++ b/docs/source/notebooks/as3600.ipynb
@@ -383,7 +383,9 @@
     "# create biaxial bending diagram\n",
     "f_bb_res1, phis1 = design_code.biaxial_bending_diagram(progress_bar=False)\n",
     "bb_res1 = conc_sec.biaxial_bending_diagram(progress_bar=False)\n",
-    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(n_design=2000e3, progress_bar=False)\n",
+    "f_bb_res2, phis2 = design_code.biaxial_bending_diagram(\n",
+    "    n_design=2000e3, progress_bar=False\n",
+    ")\n",
     "bb_res2 = conc_sec.biaxial_bending_diagram(n=2000e3, progress_bar=False)"
    ]
   },
