--- a/docs/source/notebooks/nzs3101.ipynb
+++ b/docs/source/notebooks/nzs3101.ipynb
@@ -175,7 +175,10 @@
     "transformed_props = design_code.get_transformed_gross_properties(\n",
     "    elastic_modulus=concrete_40.stress_strain_profile.elastic_modulus\n",
     ")\n",
-    "cracked_props = design_code.calculate_cracked_properties()"
+    "cracked_props = design_code.calculate_cracked_properties()\n",
+    "\n",
+    "gross_props.print_results()\n",
+    "cracked_props.print_results()"
    ]
   },
   {
@@ -955,7 +958,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -969,7 +972,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "vscode": {
    "interpreter": {
