Fix prestress workbook bug

--- a/docs/source/notebooks/prestressed_section.ipynb
+++ b/docs/source/notebooks/prestressed_section.ipynb
@@ -310,7 +310,7 @@
    "source": [
     "# design actions\n",
     "L = 35500  # length of girder in [mm]\n",
-    "g_sw = gross_props.mass * 9.81  # self weight in [N/mm]\n",
+    "g_sw = gross_props_serv.mass * 9.81  # self weight in [N/mm]\n",
     "g_si = 3  # superimposed dead load in [N/mm]\n",
     "q = 10  # live load in [N/mm]\n",
     "\n",
