--- a/docs/source/notebooks/as3600.ipynb
+++ b/docs/source/notebooks/as3600.ipynb
@@ -334,10 +334,10 @@
     "\n",
     "# parabolic\n",
     "concrete.ultimate_stress_strain_profile = ssp.EurocodeParabolicUltimate(\n",
-    "    compressive_strength=0.9 * 40,\n",
-    "    compressive_strain=0.0015,\n",
-    "    ultimate_strain=0.003,\n",
-    "    n=2,\n",
+    "    compressive_strength=40,\n",
+    "    limiting_strain=0.003,\n",
+    "    alpha_cc=0.9,\n",
+    "    gamma_c=1,\n",
     ")\n",
     "f_mi_res_par, _, _ = design_code.moment_interaction_diagram(progress_bar=False)"
    ]
@@ -422,7 +422,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -436,11 +436,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "893b3ef6d13023afab4be8c5000be38ce11a760491bcfa4047435852657817d1"
+    "hash": "0803bda3a9df4dd3228c2723d1aeb0efd0f1b14533af55b8e50ccbc570bcf420"
    }
   }
  },
