Apply black; fix requirements (including shapely 2.0)

--- a/docs/source/_static/animation.ipynb
+++ b/docs/source/_static/animation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75fa61c6",
    "metadata": {},
@@ -18,15 +19,15 @@
    "source": [
     "import concreteproperties.stress_strain_profile as ssp\n",
     "import numpy as np\n",
-    "import sectionproperties.pre.library.primitive_sections as sp_ps\n",
     "from concreteproperties.concrete_section import ConcreteSection\n",
     "from concreteproperties.material import Concrete, SteelBar\n",
     "from concreteproperties.pre import add_bar_rectangular_array\n",
     "from sectionproperties.pre.geometry import Geometry\n",
-    "from shapely.geometry import Polygon"
+    "from shapely import Polygon"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "24c549c2",
    "metadata": {},
@@ -75,6 +76,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c2a50e90",
    "metadata": {},
@@ -154,6 +156,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "34bf7ab4",
    "metadata": {},
@@ -184,6 +187,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb3f2bbb",
    "metadata": {},
@@ -220,6 +224,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cc0bce6c",
    "metadata": {},
@@ -359,6 +364,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0a16408",
    "metadata": {},
@@ -388,6 +394,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7b500e9",
    "metadata": {},
